src/test/deca/syntax/invalid/className-new.synt
className-new.deca:1:
